# viennafem-dev

./: CMakeLists.txt  CMakeLists.txt.in  CTestConfig.cmake  LICENSE  README  README.md  clean.sh
cmake/: CMakeLists.txt.in  ViennaFEMCommon.cmake  ViennaFEMConfig.cmake.in
contrib/: basic_lame.cpp  unit_cube_hex.cpp
contrib/elfem/: BFStock.hpp  typelist.h
contrib/fekete/: fekete.sh  fekete_prb.cpp  fekete_prb.sh
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  interface.txt
doc/manual/: IEEEtran_v1.13.bst  Makefile  contributors.tex  cover.tex  fem.tex  installation.tex  introduction.tex  license.tex  viennafem.bib  viennafem.kilepr  viennafem.tex
examples/: CMakeLists.txt  README
examples/data/: cube1_hex.mesh  cube343_hex.mesh  cube8_hex.mesh  line4.mesh  line8.mesh  square.in2d  square16_rect.mesh  square8.mesh  sshape2d.sgf  sshape3d-pimped.sgf  sshape3d.sgf  tet1.sgf
examples/tutorial/: basic_lame.cpp  basic_poisson.cpp  lame_3d.cpp  lame_3d_hex.cpp  poisson.cpp  poisson_1d.cpp  poisson_2d.cpp  poisson_2d_rect.cpp  poisson_3d.cpp  poisson_3d_hex.cpp  poisson_cellquan_2d.cpp  sshape_2d.cpp  sshape_3d.cpp  tut1.cpp  weak_forms.cpp
examples/tutorials/: CMakeLists.txt  basic_poisson.cpp  lame_3d.cpp  lame_3d_hex.cpp  poisson_1d.cpp  poisson_2d.cpp  poisson_2d_rect.cpp  poisson_3d.cpp  poisson_3d_hex.cpp  poisson_cellquan_2d.cpp  sshape_2d.cpp  sshape_3d.cpp  weak_forms.cpp
tests/: CMakeLists.txt  run_regression.sh
tests/data/: tet1.sgf
tests/src/: external_1.cpp  external_2.cpp  integration.cpp  poisson_2d.cpp  poisson_3d.cpp
viennafem/: BFStock.hpp  afftrans.hpp  assembler.hpp  assembling.hpp  boundary.hpp  cell_quan.hpp  dtdx_tetrahedron.h  dtdx_triangle.h  eval.hpp  fem.hpp  fem_expression_interface.hpp  forwards.h  integrator.hpp  interface.hpp  linear_pde_options.hpp  linear_pde_system.hpp  mapping.hpp  pde_assembler.hpp  pde_config.hpp  pde_solver.hpp  transform.hpp  typelist.h  unknown_config.hpp  weak_form.hpp
viennafem/bases/: BFStock.hpp  all.hpp  hexahedron.hpp  line.hpp  quadrilateral.hpp  tetrahedron.hpp  triangle.hpp
viennafem/detail/: assembler.hpp
viennafem/io/: vtk_writer.hpp
viennafem/log/: api.hpp  interface.hpp  latex.hpp  null.hpp
viennafem/old/: afftrans.hpp
viennafem/quadrature/: hexahedron.hpp  line.hpp  quad.hpp  quadrilateral.hpp  tetrahedron.hpp  triangle.hpp
viennafem/transform/: dtdx_hexahedron.hpp  dtdx_interval.hpp  dtdx_quadrilateral.hpp  dtdx_tetrahedron.hpp  dtdx_triangle.hpp
